--- a/notebooks/rapport.ipynb
+++ b/notebooks/rapport.ipynb
@@ -1,8 +1,14 @@
 {
  "cells": [],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "-1.-1.-1"
   }
  },
  "nbformat": 4,
