--- a/notebooks/rapport.ipynb
+++ b/notebooks/rapport.ipynb
@@ -1,5 +1,38 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d64c4a27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np  \n",
+    "import plotly.express as px"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5ba4891f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path =r'C:\\Users\\nmako\\OneDrive\\Documents\\Data-Science-Projects-Repository\\dataviz\\data\\raw\\Titanic-Dataset.csv'\n",
+    "data = pd.read_csv(data_path)\n",
+    "df = data.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47d937b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "venv",
@@ -7,8 +40,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "-1.-1.-1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
