--- a/notebooks/rapport.ipynb
+++ b/notebooks/rapport.ipynb
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "id": "6ca45da8",
    "metadata": {},
    "outputs": [
@@ -1193,6 +1193,7 @@
          "legendgroup": "",
          "marker": {
           "color": "#636efa",
+          "opacity": 0.8,
           "pattern": {
            "shape": ""
           }
@@ -2002,6 +2003,9 @@
          }
         },
         "title": {
+         "font": {
+          "size": 20
+         },
          "text": "Number of Passengers by Embarked"
         },
         "width": 600,
@@ -2049,8 +2053,17 @@
     "    # \n",
     "    color_continuous_scale='Viridis',\n",
     "    text=inde_1.values,\n",
-    "    barmode='stack'\n",
+    "    barmode='stack',\n",
+    "    opacity=0.8\n",
     "\n",
+    "    )\n",
+    "fig.update_layout(\n",
+    "    #yaxis={'categoryorder':'total ascending'}\n",
+    "    title_font_size=20,\n",
+    "    #title_x=0.5,\n",
+    "\n",
+    "    \n",
+    "    \n",
     "    )\n",
     "\n",
     "fig.show()"
