--- a/notebooks/rapport.ipynb
+++ b/notebooks/rapport.ipynb
@@ -3187,7 +3187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "e96c984e",
    "metadata": {},
    "outputs": [
@@ -3195,7 +3195,8 @@
      "data": {
       "application/vnd.plotly.v1+json": {
        "config": {
-        "plotlyServerURL": "https://plot.ly"
+        "plotlyServerURL": "https://plot.ly",
+        "staticPlot": true
        },
        "data": [
         {
@@ -4068,6 +4069,7 @@
     "    line_shape='spline',\n",
     "    #animation_frame = 'Mois',\n",
     "    range_y=[0, 300],\n",
+    "    template='plotly',\n",
     "\n",
     "    )\n",
     "\n",
