--- a/notebooks/rapport.ipynb
+++ b/notebooks/rapport.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 137,
    "id": "d64c4a27",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,15 @@
     "import pandas as pd\n",
     "import numpy as np  \n",
     "import plotly.express as px\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import plotly.io as pio\n",
+    "import plotly.io as pio\n",
+    "pio.kaleido.scope\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 130,
    "id": "5ba4891f",
    "metadata": {},
    "outputs": [],
@@ -1118,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 131,
    "id": "876ffe62",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1140,7 @@
          "type": "integer"
         }
        ],
-       "ref": "38c62bce-f24e-4961-a2b2-7072a42cc406",
+       "ref": "71df086c-fe3d-4257-8625-da29b857b202",
        "rows": [
         [
          "S",
@@ -1165,7 +1168,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 139,
    "id": "6ca45da8",
    "metadata": {},
    "outputs": [
@@ -2092,7 +2095,9 @@
     "\n",
     "      \n",
     "      )\n",
-    "fig.show(config={\"staticPlot\": True})\n"
+    "fig.show(config={\"staticPlot\": True})\n",
+    "\n",
+    "\n"
    ]
   },
   {
