--- a/notebooks/rapport.ipynb
+++ b/notebooks/rapport.ipynb
@@ -4083,7 +4083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 176,
    "id": "5af78c65",
    "metadata": {},
    "outputs": [
@@ -4157,7 +4157,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "6363327d-9a18-4d2d-be6d-91ab2f57532a",
+       "ref": "dfcc0bb7-187e-4b19-8389-298df823e84d",
        "rows": [
         [
          "0",
@@ -5162,7 +5162,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5173,7 +5173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 183,
    "id": "0472eddf",
    "metadata": {},
    "outputs": [
@@ -5185,25 +5185,20 @@
        },
        "data": [
         {
-         "hovertemplate": "Mois: %{x}<br>Ventes: %{y}<extra></extra>",
+         "hovertemplate": "Mois=%{x}<br>Ventes=%{y}<extra></extra>",
          "legendgroup": "",
          "marker": {
-          "color": "indianred",
-          "line": {
-           "color": "rgb(8,48,107)",
-           "width": 1.5
-          },
+          "color": "#75A5C7",
           "pattern": {
            "shape": ""
           }
          },
          "name": "",
-         "opacity": 0.6,
          "orientation": "v",
          "showlegend": false,
-         "textposition": "outside",
-         "texttemplate": "%{y}",
+         "textposition": "auto",
          "type": "bar",
+         "width": 0.9,
          "x": [
           "Jan",
           "Fév",
@@ -5228,6 +5223,7 @@
        ],
        "layout": {
         "barmode": "relative",
+        "height": 400,
         "legend": {
          "tracegroupgap": 0
         },
@@ -6010,6 +6006,7 @@
         "title": {
          "text": "Évolution des ventes"
         },
+        "width": 600,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -6043,16 +6040,22 @@
     "    x=\"Mois\", \n",
     "    y=\"Ventes\", \n",
     "    title=\"Évolution des ventes\",\n",
+    "    width=600,\n",
+    "    height=400,\n",
     ")\n",
     "\n",
     "fig.update_traces(\n",
-    "    marker_color='indianred', \n",
-    "    marker_line_color='rgb(8,48,107)',\n",
-    "    marker_line_width=1.5, \n",
-    "    opacity=0.6,\n",
-    "    hovertemplate='Mois: %{x}<br>Ventes: %{y}<extra></extra>',\n",
-    "    texttemplate='%{y}',\n",
-    "    textposition='outside'\n",
+    "    marker_color='#75A5C7', \n",
+    "    width=0.9,\n",
+    "   \n",
+    "   \n",
+    "    #marker_line_color='rgb(8,48,107)',\n",
+    "    #marker_line_width=1.5, \n",
+    "    #opacity=0.6,\n",
+    "    \n",
+    "    #hovertemplate='Mois: %{x}<br>Ventes: %{y}<extra></extra>',\n",
+    "    #texttemplate='%{y}',\n",
+    "   # textposition='outside'\n",
     "      \n",
     "      )\n",
     "\n",
