--- a/notebooks/rapport.ipynb
+++ b/notebooks/rapport.ipynb
@@ -5173,7 +5173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 192,
    "id": "0472eddf",
    "metadata": {},
    "outputs": [
@@ -5196,7 +5196,12 @@
          "name": "",
          "orientation": "v",
          "showlegend": false,
-         "textposition": "auto",
+         "textfont": {
+          "color": "grey",
+          "size": 8
+         },
+         "textposition": "inside",
+         "texttemplate": "%{y}",
          "type": "bar",
          "width": 0.9,
          "x": [
@@ -6006,7 +6011,7 @@
         "title": {
          "text": "Évolution des ventes"
         },
-        "width": 600,
+        "width": 700,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -6040,13 +6045,17 @@
     "    x=\"Mois\", \n",
     "    y=\"Ventes\", \n",
     "    title=\"Évolution des ventes\",\n",
-    "    width=600,\n",
+    "    width=700,\n",
     "    height=400,\n",
     ")\n",
     "\n",
     "fig.update_traces(\n",
     "    marker_color='#75A5C7', \n",
     "    width=0.9,\n",
+    "    texttemplate='%{y}',\n",
+    "    textposition='inside',\n",
+    "    textfont_size=8,\n",
+    "    textfont_color='grey',\n",
     "   \n",
     "   \n",
     "    #marker_line_color='rgb(8,48,107)',\n",
