--- a/notebooks/rapport.ipynb
+++ b/notebooks/rapport.ipynb
@@ -5173,7 +5173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 267,
    "id": "0472eddf",
    "metadata": {},
    "outputs": [
@@ -5185,23 +5185,31 @@
        },
        "data": [
         {
-         "hovertemplate": "Mois=%{x}<br>Ventes=%{y}<extra></extra>",
+         "cliponaxis": false,
+         "hoverinfo": "x+y+text",
+         "hovertemplate": "Mois: %{x}<br>Ventes: %{y} M<extra></extra>",
          "legendgroup": "",
          "marker": {
           "color": "#75A5C7",
+          "line": {
+           "width": 1.5
+          },
           "pattern": {
            "shape": ""
           }
          },
          "name": "",
+         "opacity": 0.99,
          "orientation": "v",
          "showlegend": false,
          "textfont": {
-          "color": "grey",
-          "size": 8
+          "color": "#ffffff",
+          "family": "Verdana",
+          "size": 9,
+          "weight": "normal"
          },
          "textposition": "inside",
-         "texttemplate": "%{y}",
+         "texttemplate": "%{y} M",
          "type": "bar",
          "width": 0.9,
          "x": [
@@ -5227,11 +5235,45 @@
         }
        ],
        "layout": {
+        "annotations": [
+         {
+          "font": {
+           "color": "grey",
+           "size": 10
+          },
+          "showarrow": false,
+          "text": "Source: Données internes",
+          "x": 0.5,
+          "xref": "paper",
+          "y": -0.25,
+          "yref": "paper"
+         }
+        ],
         "barmode": "relative",
         "height": 400,
         "legend": {
-         "tracegroupgap": 0
+         "font": {
+          "color": "black",
+          "family": "Verdana",
+          "size": 12
+         },
+         "orientation": "h",
+         "title": {
+          "text": "Catégories"
+         },
+         "tracegroupgap": 0,
+         "x": 0.5,
+         "xanchor": "center",
+         "y": -0.2
         },
+        "margin": {
+         "b": 50,
+         "l": 50,
+         "r": 50,
+         "t": 80
+        },
+        "paper_bgcolor": "white",
+        "plot_bgcolor": "white",
         "template": {
          "data": {
           "bar": [
@@ -6009,7 +6051,15 @@
          }
         },
         "title": {
-         "text": "Évolution des ventes"
+         "font": {
+          "color": "#333333",
+          "family": "Verdana",
+          "size": 20,
+          "weight": "bold"
+         },
+         "text": "Ventes mensuelles (en Kg)",
+         "x": 0.5,
+         "xanchor": "center"
         },
         "width": 700,
         "xaxis": {
@@ -6018,6 +6068,15 @@
           0,
           1
          ],
+         "linecolor": "black",
+         "showgrid": false,
+         "showline": true,
+         "tickangle": -30,
+         "tickfont": {
+          "color": "black",
+          "family": "Arial",
+          "size": 12
+         },
          "title": {
           "text": "Mois"
          }
@@ -6028,9 +6087,17 @@
           0,
           1
          ],
+         "gridcolor": "lightgrey",
+         "showgrid": true,
+         "tickfont": {
+          "color": "black",
+          "family": "Arial",
+          "size": 12
+         },
          "title": {
-          "text": "Ventes"
-         }
+          "text": "Quantité (Kg)"
+         },
+         "zeroline": false
         }
        }
       }
@@ -6044,40 +6111,96 @@
     "    data, \n",
     "    x=\"Mois\", \n",
     "    y=\"Ventes\", \n",
-    "    title=\"Évolution des ventes\",\n",
     "    width=700,\n",
     "    height=400,\n",
     ")\n",
     "\n",
     "fig.update_traces(\n",
+    "\n",
     "    marker_color='#75A5C7', \n",
-    "    width=0.9,\n",
-    "    texttemplate='%{y}',\n",
+    "    opacity=0.99,\n",
+    "    width=0.9,  #largeur des barres\n",
+    "\n",
+    "    #texte des valeurs\n",
+    "    texttemplate='%{y} M',\n",
     "    textposition='inside',\n",
-    "    textfont_size=8,\n",
-    "    textfont_color='grey',\n",
+    "    textfont=dict(\n",
+    "        size=9,\n",
+    "        color='#ffffff',\n",
+    "        family='Verdana',\n",
+    "        weight='normal'\n",
+    "    ),\n",
+    "    #bordures des barres\n",
+    "    marker_line_color= None,\n",
+    "    marker_line_width=1.5,\n",
+    "\n",
+    "    #espacement entre les groupes/barres\n",
+    "    offset=None,\n",
+    "    cliponaxis=False,     # Permet d’afficher du texte même hors du cadre\n",
+    "    #info-bulles (hover)\n",
+    "    hoverinfo='x+y+text',\n",
+    "    hovertemplate='Mois: %{x}<br>Ventes: %{y} M<extra></extra>'\n",
+    "\n",
     "   \n",
-    "   \n",
-    "    #marker_line_color='rgb(8,48,107)',\n",
-    "    #marker_line_width=1.5, \n",
-    "    #opacity=0.6,\n",
-    "    \n",
-    "    #hovertemplate='Mois: %{x}<br>Ventes: %{y}<extra></extra>',\n",
-    "    #texttemplate='%{y}',\n",
-    "   # textposition='outside'\n",
-    "      \n",
     "      )\n",
+    "    \n",
+    "fig.update_layout(\n",
+    "    # 🎯 TITRES\n",
+    "    title=dict(\n",
+    "        text=\"Ventes mensuelles (en Kg)\",  # texte du titre\n",
+    "        x=0.5,              # position horizontale (0= gauche, 0.5 = centré, 1= droite)\n",
+    "        xanchor=\"center\",\n",
+    "        font=dict(size=20, color=\"#333333\", family=\"Verdana\", weight=\"bold\")\n",
+    "    ),\n",
+    "\n",
+    "    # 🎯 AXES\n",
+    "    xaxis=dict(\n",
+    "        title=\"Mois\",\n",
+    "        showgrid=False,      # grille verticale (désactiver si besoin)\n",
+    "        showline=True,       # affiche la ligne de l’axe\n",
+    "        linecolor=\"black\",\n",
+    "        tickangle=-30,       # rotation des labels\n",
+    "        tickfont=dict(size=12, family=\"Arial\", color=\"black\")\n",
+    "    ),\n",
+    "    yaxis=dict(\n",
+    "        title=\"Quantité (Kg)\",\n",
+    "        showgrid=True,\n",
+    "        gridcolor=\"lightgrey\",\n",
+    "        zeroline=False,      # désactive ligne horizontale en y=0\n",
+    "        tickfont=dict(size=12, family=\"Arial\", color=\"black\")\n",
+    "    ),\n",
+    "\n",
+    "    # 🎯 LÉGENDE\n",
+    "    legend=dict(\n",
+    "        title=\"Catégories\",\n",
+    "        orientation=\"h\",     # \"h\" = horizontale, \"v\" = verticale\n",
+    "        y=-0.2,              # position sous le graphique\n",
+    "        x=0.5,\n",
+    "        xanchor=\"center\",\n",
+    "        font=dict(size=12, color=\"black\", family=\"Verdana\")\n",
+    "    ),\n",
+    "\n",
+    "    # 🎯 ARRIÈRE-PLAN & STYLE\n",
+    "    plot_bgcolor=\"white\",     # fond du graphique\n",
+    "    paper_bgcolor=\"white\",    # fond général\n",
+    "    margin=dict(l=50, r=50, t=80, b=50),  # marges (left, right, top, bottom)\n",
+    "\n",
+    "    # 🎯 ANNOTATIONS (optionnel)\n",
+    "    annotations=[\n",
+    "        dict(\n",
+    "            text=\"Source: Données internes\",\n",
+    "            x=0.5, y=-0.25,\n",
+    "            xref=\"paper\", yref=\"paper\",\n",
+    "            showarrow=False,\n",
+    "            font=dict(size=10, color=\"grey\")\n",
+    "        )\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "\n",
     "\n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7fc815f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
