--- a/notebooks/rapport.ipynb
+++ b/notebooks/rapport.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 2,
    "id": "d64c4a27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<plotly.io._kaleido.DefaultsWrapper at 0x1659f5bd160>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np  \n",
@@ -18,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 3,
    "id": "5ba4891f",
    "metadata": {},
    "outputs": [],
@@ -30,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 4,
    "id": "47d937b7",
    "metadata": {},
    "outputs": [
@@ -104,7 +115,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "c5a38ac4-617f-414e-a9c7-913a30e68e95",
+       "ref": "3b8ce8e6-a0be-4b9d-b667-c3676e57af20",
        "rows": [
         [
          "0",
@@ -1109,7 +1120,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 5,
    "id": "876ffe62",
    "metadata": {},
    "outputs": [
@@ -1140,7 +1151,7 @@
          "type": "integer"
         }
        ],
-       "ref": "08755614-d892-4678-88bd-fe24f12114b2",
+       "ref": "3c8791c5-ce85-4a89-9160-3652d423cdb0",
        "rows": [
         [
          "S",
@@ -1168,7 +1179,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 6,
    "id": "6ca45da8",
    "metadata": {},
    "outputs": [
@@ -2102,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 7,
    "id": "5a2a0e00",
    "metadata": {},
    "outputs": [
@@ -2176,7 +2187,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "39f8aa30-e105-4561-8436-3a60fd4cbe3f",
+       "ref": "617ef1dc-9af6-4d9a-ae1d-8c1aad1239ef",
        "rows": [
         [
          "0",
@@ -3181,7 +3192,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3192,7 +3203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 8,
    "id": "e96c984e",
    "metadata": {},
    "outputs": [
@@ -4083,7 +4094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 9,
    "id": "5af78c65",
    "metadata": {},
    "outputs": [
@@ -4157,7 +4168,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "dfcc0bb7-187e-4b19-8389-298df823e84d",
+       "ref": "5f51b936-0444-4ae9-9893-2cb419eb3d86",
        "rows": [
         [
          "0",
@@ -5162,7 +5173,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5173,7 +5184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 25,
    "id": "0472eddf",
    "metadata": {},
    "outputs": [
@@ -5190,7 +5201,7 @@
          "hovertemplate": "Mois: %{x}<br>Ventes: %{y} M<extra></extra>",
          "legendgroup": "",
          "marker": {
-          "color": "#75A5C7",
+          "color": "#116BB4",
           "line": {
            "width": 1.5
           },
@@ -5205,13 +5216,13 @@
          "textfont": {
           "color": "#ffffff",
           "family": "Verdana",
-          "size": 9,
+          "size": 8,
           "weight": "normal"
          },
          "textposition": "inside",
          "texttemplate": "%{y} M",
          "type": "bar",
-         "width": 0.9,
+         "width": 1,
          "x": [
           "Jan",
           "Fév",
@@ -5250,7 +5261,7 @@
          }
         ],
         "barmode": "relative",
-        "height": 400,
+        "height": 300,
         "legend": {
          "font": {
           "color": "black",
@@ -6061,7 +6072,7 @@
          "x": 0.5,
          "xanchor": "center"
         },
-        "width": 700,
+        "width": 500,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -6111,21 +6122,21 @@
     "    data, \n",
     "    x=\"Mois\", \n",
     "    y=\"Ventes\", \n",
-    "    width=700,\n",
-    "    height=400,\n",
+    "    width=500,\n",
+    "    height=300,\n",
     ")\n",
     "\n",
     "fig.update_traces(\n",
     "\n",
-    "    marker_color='#75A5C7', \n",
+    "    marker_color=\"#116BB4\", \n",
     "    opacity=0.99,\n",
-    "    width=0.9,  #largeur des barres\n",
+    "    width=1,  #largeur des barres\n",
     "\n",
     "    #texte des valeurs\n",
     "    texttemplate='%{y} M',\n",
     "    textposition='inside',\n",
     "    textfont=dict(\n",
-    "        size=9,\n",
+    "        size=8,\n",
     "        color='#ffffff',\n",
     "        family='Verdana',\n",
     "        weight='normal'\n",
