--- a/notebooks/rapport.ipynb
+++ b/notebooks/rapport.ipynb
@@ -5184,7 +5184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "id": "0472eddf",
    "metadata": {},
    "outputs": [
@@ -6063,10 +6063,10 @@
         },
         "title": {
          "font": {
-          "color": "#333333",
+          "color": "#8696A8",
           "family": "Verdana",
-          "size": 20,
-          "weight": "bold"
+          "size": 15,
+          "weight": "normal"
          },
          "text": "Ventes mensuelles (en Kg)",
          "x": 0.5,
@@ -6081,7 +6081,7 @@
          ],
          "linecolor": "black",
          "showgrid": false,
-         "showline": true,
+         "showline": false,
          "tickangle": -30,
          "tickfont": {
           "color": "black",
@@ -6089,7 +6089,7 @@
           "size": 12
          },
          "title": {
-          "text": "Mois"
+          "text": " "
          }
         },
         "yaxis": {
@@ -6154,21 +6154,22 @@
     "\n",
     "   \n",
     "      )\n",
-    "    \n",
+    "\n",
+    "\n",
     "fig.update_layout(\n",
     "    # 🎯 TITRES\n",
     "    title=dict(\n",
     "        text=\"Ventes mensuelles (en Kg)\",  # texte du titre\n",
     "        x=0.5,              # position horizontale (0= gauche, 0.5 = centré, 1= droite)\n",
     "        xanchor=\"center\",\n",
-    "        font=dict(size=20, color=\"#333333\", family=\"Verdana\", weight=\"bold\")\n",
+    "        font=dict(size=15, color=\"#8696A8\", family=\"Verdana\", weight=\"normal\")\n",
     "    ),\n",
     "\n",
     "    # 🎯 AXES\n",
     "    xaxis=dict(\n",
-    "        title=\"Mois\",\n",
+    "        title=\" \",\n",
     "        showgrid=False,      # grille verticale (désactiver si besoin)\n",
-    "        showline=True,       # affiche la ligne de l’axe\n",
+    "        showline=False,       # affiche la ligne de l’axe\n",
     "        linecolor=\"black\",\n",
     "        tickangle=-30,       # rotation des labels\n",
     "        tickfont=dict(size=12, family=\"Arial\", color=\"black\")\n",
@@ -6208,9 +6209,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "\n",
-    "\n",
-    "fig.show()"
+    "    \n"
    ]
   }
  ],
